# sealer2100

./: .gitignore  README.md  README_ZH.md
sealer2100/jub-sdk-cxx/: .gitmodules  CMakeLists.txt  README.md
sealer2100/jub-sdk-cxx/JubSDKCore/: CMakeLists.txt  JubSDKCore+COIN_BTC.h  JubSDKCore+COIN_BTC.mm  JubSDKCore+COIN_EOS.h  JubSDKCore+COIN_EOS.mm  JubSDKCore+COIN_ETH.h  JubSDKCore+COIN_ETH.mm  JubSDKCore+COIN_FIL.h  JubSDKCore+COIN_FIL.mm  JubSDKCore+COIN_SOL.h  JubSDKCore+COIN_SOL.mm  JubSDKCore+COIN_TRX.h  JubSDKCore+COIN_TRX.mm  JubSDKCore+COIN_XRP.h  JubSDKCore+COIN_XRP.mm  JubSDKCore+DEV.h  JubSDKCore+DEV.mm  JubSDKCore+DEV_BIO.h  JubSDKCore+DEV_BIO.mm  JubSDKCore+DEV_BLE.h  JubSDKCore+DEV_BLE.mm  JubSDKCore+HCash.h  JubSDKCore+HCash.mm  JubSDKCore.h
sealer2100/jub-sdk-cxx/JubSDKDemo/: Info.plist  ViewController.h  ViewController.mm
sealer2100/jub-sdk-cxx/JubSDKDemo/Base.lproj/: Main.storyboard
sealer2100/jub-sdk-cxx/builds/ios/GDbleTransmit.xcodeproj/: project.pbxproj
sealer2100/jub-sdk-cxx/builds/ios/JubSDK.xcodeproj/: project.pbxproj
sealer2100/jub-sdk-cxx/builds/ios/JubSDK.xcworkspace/: contents.xcworkspacedata
sealer2100/jub-sdk-cxx/cmake/: Protobuf.cmake
sealer2100/jub-sdk-cxx/common/common/protob/: FirmwareUpdate.pb.h  (+26 more)
sealer2100/jub-sdk-cxx/common/protob/: FirmwareUpdate.proto  Makefile  make_proto.sh  messages-bitcoin.proto  messages-common.proto  messages-ethereum-definitions.proto  messages-ethereum-digitalshield.proto  messages-ethereum-eip712-digitalshield.proto  messages-fs.proto  messages-management.proto  messages-sui.proto  messages-ton.proto  messages.proto
sealer2100/jub-sdk-cxx/common/protocpp/: messages-algorand.pb.cc  messages-algorand.pb.h  messages-aptos.pb.cc  messages-aptos.pb.h  messages-binance.pb.cc  messages-binance.pb.h  messages-bitcoin.pb.cc  messages-bitcoin.pb.h  messages-bootloader.pb.cc  messages-bootloader.pb.h  messages-cardano.pb.cc  messages-cardano.pb.h  messages-common.pb.cc  messages-common.pb.h  messages-conflux.pb.cc  messages-conflux.pb.h  messages-cosmos.pb.cc  messages-cosmos.pb.h  messages-crypto.pb.cc  messages-crypto.pb.h  messages-debug.pb.cc  messages-debug.pb.h  messages-emmc.pb.cc  messages-emmc.pb.h  messages-eos.pb.cc  messages-eos.pb.h  messages-ethereum-definitions.pb.cc  messages-ethereum-definitions.pb.h  messages-ethereum-digitalshield.pb.cc  messages-ethereum-digitalshield.pb.h  messages-ethereum-eip712-digitalshield.pb.cc  messages-ethereum-eip712-digitalshield.pb.h  messages-ethereum-eip712.pb.cc  messages-ethereum-eip712.pb.h  messages-ethereum.pb.cc  messages-ethereum.pb.h  messages-filecoin.pb.cc  messages-filecoin.pb.h  messages-fs.pb.cc  messages-fs.pb.h  (+34 more)
sealer2100/jub-sdk-cxx/include/: JUB_SDK.h  JUB_SDK_BTC.h  JUB_SDK_COMM.h  JUB_SDK_DEV.h  JUB_SDK_DEV_BIO.h  JUB_SDK_DEV_BLE.h  JUB_SDK_DEV_BLE_NUS.h  JUB_SDK_DEV_HID.h  JUB_SDK_EOS.h  JUB_SDK_ETH.h  JUB_SDK_FIL.h  JUB_SDK_Hcash.h  JUB_SDK_SOL.h  JUB_SDK_TRX.h  JUB_SDK_XRP.h
sealer2100/jub-sdk-cxx/include/HDKey/: HDKey.hpp
sealer2100/jub-sdk-cxx/include/context/: Context.h  ContextAPTOS.h  ContextBTC.h  ContextEOS.h  ContextETH.h  ContextFIL.h  ContextHC.h  ContextSOL.h  ContextSUI.h  ContextTRX.h  ContextXRP.h
sealer2100/jub-sdk-cxx/include/device/: DeviceTypeBase.hpp  JubiterBLEDevice.hpp  JubiterBLENusDevice.hpp  JubiterHidDevice.hpp
sealer2100/jub-sdk-cxx/include/libBTC/: libBTC.hpp
sealer2100/jub-sdk-cxx/include/libEOS/: libEOS.hpp
sealer2100/jub-sdk-cxx/include/libHC/: libHC.h
sealer2100/jub-sdk-cxx/include/libTRX/: libTRX.hpp
sealer2100/jub-sdk-cxx/include/token/: JubiterBLDImpl.h  JubiterBioImpl.h  JubiterSealer2100Impl.h
sealer2100/jub-sdk-cxx/include/utility/: Apdu.hpp  Debug.hpp  Version.hpp  tlv.hpp  util.h
sealer2100/jub-sdk-cxx/src/: CMakeLists.txt  JUB_SDK_BTC.cpp  JUB_SDK_COMM.cpp  JUB_SDK_DEV.cpp  JUB_SDK_DEV_BIO.cpp  JUB_SDK_DEV_BLE.cpp  JUB_SDK_DEV_BLE_NUS.cpp  JUB_SDK_DEV_HID.cpp  JUB_SDK_EOS.cpp  JUB_SDK_ETH.cpp  JUB_SDK_FIL.cpp  JUB_SDK_Hcash.cpp  JUB_SDK_SOL.cpp  JUB_SDK_TRX.cpp  JUB_SDK_XRP.cpp
sealer2100/jub-sdk-cxx/src/HDKey/: HDKey.cpp
sealer2100/jub-sdk-cxx/src/context/: Context.cpp  ContextAPTOS.cpp  ContextBTC.cpp  ContextEOS.cpp  ContextETH.cpp  ContextFIL.cpp  ContextHC.cpp  ContextSOL.cpp  ContextSUI.cpp  ContextTRX.cpp  ContextXRP.cpp
sealer2100/jub-sdk-cxx/src/device/: JubiterBLEDevice.cpp  JubiterBLENusDevice.cpp  JubiterHidDevice.cpp
sealer2100/jub-sdk-cxx/src/libBTC/: libBTC.cpp
sealer2100/jub-sdk-cxx/src/libEOS/: libEOS.cpp
sealer2100/jub-sdk-cxx/src/libETH/: libETH.cpp
sealer2100/jub-sdk-cxx/src/libHC/: libHC.cpp
sealer2100/jub-sdk-cxx/src/libTRX/: libTRX.cpp
sealer2100/jub-sdk-cxx/src/libXRP/: libXRP.cpp
sealer2100/jub-sdk-cxx/src/token/: JubiterBLDImpl.cpp  JubiterBLDImplAPTOS.cpp  JubiterBLDImplBTC.cpp  JubiterBLDImplEOS.cpp  JubiterBLDImplETH.cpp  JubiterBLDImplFIL.cpp  JubiterBLDImplHC.cpp  JubiterBLDImplSOL.cpp  JubiterBLDImplSUI.cpp  JubiterBLDImplTRX.cpp  JubiterBLDImplXRP.cpp  JubiterBioImpl.cpp  JubiterBioImplETH.cpp  JubiterSealer2100Impl.cpp  JubiterSealer2100ImplAPTOS.cpp  JubiterSealer2100ImplBTC.cpp  JubiterSealer2100ImplEOS.cpp  JubiterSealer2100ImplETH.cpp  JubiterSealer2100ImplFIL.cpp  JubiterSealer2100ImplSOL.cpp  JubiterSealer2100ImplSUI.cpp  JubiterSealer2100ImplTRX.cpp  JubiterSealer2100ImplXRP.cpp
sealer2100/jub-sdk-cxx/src/utility/: tlv.cpp  util.cpp
sealer2100/jub-sdk-cxx/test/JubSDKCore/: main.mm  test_btc.mm  test_dev.mm  test_eos.mm  test_eth.mm  test_fgpt.mm  test_fil.mm  test_sol.mm  test_trezor_crypto.mm  test_trx.mm
sealer2100/jub-sdk-cxx/test/json/: testBTCTN84.json  testETH.json  testETH_Uniswap.json  testTRX.json
sealer2100/jub-sdk-cxx/tools/: ios-build
sealer2100/jub-sdk-cxx/trezor-crypto/: CMakeLists.txt
sealer2100/jub-sdk-cxx/trezor-crypto/src/: base58.c  bip32_hyp.c  ecdsa.c  rand.c  script.c
sealer2100/jub-sdk-cxx/trezor-crypto/tests/: test_check.c  test_check_cardano.h  test_check_cashaddr.h  test_check_nano.h  test_speed.c
sealer2100/jub-sdk-cxx/trezor-crypto/tools/: bip39bruteforce.c  xpubaddrgen.c
(+960 files in other folders)
