cmake_minimum_required(VERSION 3.14.0)

message(">>>> JUB_SDK")

# message(">>>> CMAKE_SOURCE_DIR: ${CMAKE_SOURCE_DIR}")
# message(">>>> CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
include(../cmake/Protobuf.cmake)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/ SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/utility SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/context SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/device SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/libBTC SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/libETH SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/libEOS SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/libHC SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/libXRP SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/libTRX SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/token SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/HDKey SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../pbparse SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bleTransmit SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bigint SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bitcoin SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bitcoinABC SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/json/include SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/EOS SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/Ethereum SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/Ripple SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/Filecoin SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/Tron SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/Solana SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/proto/Tron/protocol/core SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/proto/Tron/protocol/core/contract SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../trezor-crypto/src SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../trezor-crypto/src/ed25519-donna SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../trezor-crypto/src/aes SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../trezor-crypto/src/sodium SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../trezor-crypto/src/sodium/private SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../trezor-crypto/src/sodium/private/fe_25_5 SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../trezor-crypto/src/chacha20poly1305 SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/uint256_t SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../common/protocpp SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../common/common/protob SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/nanopb SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/trezorProtocol SRC_LIST)
list(APPEND SRC_LIST ${CMAKE_CURRENT_SOURCE_DIR}/../deps/secure-channel/secure_channel.c)




include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include/utility)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/protobuf/src)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/libzip)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/secure-channel)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/secure-channel/mbedtls/include)

if(IOS)
    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bleTransmit/ios)
elseif(ANDROID)
    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bleTransmit/android)
endif()

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bigint)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bitcoin)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bitcoin/crypto)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bitcoinABC)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/libbitcoin)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/json/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/protobuf/src)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/nanopb)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/include/TrustWalletCore)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/EOS)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/Ethereum)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/Ripple)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/Filecoin)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/Tron)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/proto/Tron/protocol)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/proto/Tron/protocol/core)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/proto/Tron/protocol/core/contract)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../trezor-crypto/include)
include_directories(${PROJECT_BINARY_DIR}/deps/libzip)


ADD_DEFINITIONS(-DTARGET_OS_IPHONE=1)



# add_compile_definitions(TARGET_OS_IPHONE=1)
# COMPILE_DEFINITIONS()
ADD_LIBRARY(JubSDK STATIC ${SRC_LIST})

# test endian.h
find_path(ENDIAN_PATH endian.h)
find_path(SYS_ENDIAN_PATH sys/endian.h)

if(ENDIAN_PATH)
    message("ENDIAN_PATH = ${ENDIAN_PATH}")
    target_compile_definitions(JubSDK PRIVATE HAVE_ENDIAN_H=1)
elseif(SYS_ENDIAN_PATH)
    message("SYS_ENDIAN_PATH = ${SYS_ENDIAN_PATH}")
    target_compile_definitions(JubSDK PRIVATE HAVE_SYS_ENDIAN_H=1)
else ()
    message(FATAL_ERROR "no SYS_ENDIAN_PATH or ENDIAN_PATH.")
endif()
